Estruturando o projecto e estilisando o cabecalho do index.html

--- a/sobre.html
+++ b/sobre.html
@@ -65,7 +65,7 @@
             </address>
         </div>
         
-        <div class="contacto_secao-telefone">
+        <div id="contacto" class="contacto_secao-telefone">
             <h3 class="contacto-subtitulo"> Telefones </h3>
             <small> (segunda à sexta, das 9h às 18h) </small>
             
