Terminando a estilização do  header

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <body>
         <header class="cabecalho">
             <a href="index.html">
-                <img src="img/logo.svg" title="Ir para a página inicial da MusicaDot" alt="MusicaDot">
+                <img class="cabecalho-logo" src="img/logo.svg" title="Ir para a página inicial da MusicaDot" alt="MusicaDot">
             </a>
             <nav>
-                <ul>
-                    <li><a href="sobre.html">Contacto</a></li>
-                    <li><a href="#">Entrar</a></li>
-                    <li><a href="#">Matricular-se</a></li>
+                <ul class="cabecalho-menu">
+                    <li class="cabecalho_menu-item"><a href="paginas/sobre.html">Contacto</a></li>
+                    <li class="cabecalho_menu-item"><a href="#">Entrar</a></li>
+                    <li class="cabecalho_menu-item cabecalho_menu-item--matricular"><a href="#">Matricular-se</a></li>
                 </ul>
             </nav>
         </header>
