--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width">
         <title>MusicDot | Sobre a empresa</title> 
         <link rel="icon" href="img/favicon.ico" > 
-        <link rel="stylesheet" href="css/estilo.css">
+        <link rel="stylesheet" href="../css/sobre.css">
     </head>
 
     <body>
-        <img src="img/logo.svg" alt="MusicaDot">
+        <img src="../img/logo.svg" alt="MusicaDot">
         <h1 class="titulo">Sobre a empresa</h1>
 
         <p>A MusicaDot é a maior escola online de música em todo o mundo. Fundada em 1932, possui estúdios em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles.</p>
@@ -17,7 +17,7 @@
             q=190,GabrielDequech,Mafra,SC" target="_blank">Mafra, em Santa Catarina</a>. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz</p>
 
         <figure class="matriz-musicdot">
-            <img src="img/matriz-musicdot.png" alt="Foto da matriz da musicadot">
+            <img src="../img/matriz-musicdot.png" alt="Foto da matriz da musicadot">
             <figcaption>Matriz MusicDot</figcaption>
         </figure>
         <p>Assine os cursos da MusicaDot. Acesse <a href="index.html">nosso site</a> ou entre em contacto se tiveres dúvidas. Conheça também <a href=""> nossa história e </a>e <a href="#diferenciais">nossos diferenciais</a></p>
@@ -25,7 +25,7 @@
         <h2 class="subtitulo">História</h2>
 
         <figure class="familia-tupfeln">
-            <img src="img/familia-tupfeln.jpg" alt="Familia Tupfeln">
+            <img src="../img/familia-tupfeln.jpg" alt="Familia Tupfeln">
             <figcaption>Família Tupfeln</figcaption>
         </figure>
 
@@ -84,7 +84,7 @@
 
 
         <footer class="rodape">
-            <img src="img/logo.svg" alt="Logo da musicdot" class="rodape_logo">
+            <img src="../img/logo.svg" alt="Logo da musicdot" class="rodape_logo">
             <p class="rodape_copyright"> &copy; Copyright MusicDot </p>
         </footer>
     </body>
