--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="device=width-width">
         <title>MusicaDot</title>
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/rodape.css">
         <link rel="stylesheet" href="css/reset.css">
     </head>
 
@@ -23,10 +24,72 @@
         </header>
 
         <main>
-
+            <p>conteudo principal</p>
         </main>
 
-        <footer>
+        <footer class="rodape">
+
+            <section class="rodape-seccao">
+
+                <img src="img/logo.svg" alt="logo_musicadot" class="logo_rodape">
+
+                <address class="rodape_info-empresa">
+                    AOVS Sistemas de Informática S.A
+                    <br>
+                    Rua Vergueiro, 3185, 8º andar
+                    <br>
+                    Vila Mariana
+                    <br>
+                    São Paulo - SP
+                </address>
+
+                <ul class="rodape_lista-midias">
+                    <li class="rodape_item-midia">
+                        <img src="img/footer-icone-facebook.svg" alt="MusicaDot no facebook">
+                    </li>
+                    <li class="rodape_item-midia">
+                        <img src="img/footer-icone-youtube.svg" alt="MusicaDot no youtube">
+                    </li>
+                    <li class="rodape_item-midia">
+                        <img src="img/footer-icone-instagram.svg" alt="MusicaDot no instagram">
+                    </li>
+                </ul>
+            </section>
+
+            <section class="rodape-seccao">
+                <nav>
+                    <h2 class="rodape_titulo">cursos DA MUSUICDOT</h2>
+
+                    <ul>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Teclado & Piano</a></li>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Guitara</a></li>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Baixo</a></li>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Bateria</a></li>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Canto</a></li>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Audio</a></li>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Teoria</a></li>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Sopro</a></li>
+                        <li class="rodape_item-lista"><a href="#">Cursos de Corda</a></li>
+                    </ul>
+                </nav>
+               
+            </section>
+
+            <section class="rodape-seccao">
+                <h2 class="rodape_titulo">MusicDot</h2>
+                <nav>
+                    <ul>
+                        <li class="rodape_item-lista"><a href="#">Apostila</a></li>
+                        <li class="rodape_item-lista"><a href="#">E-book</a></li>
+                        <li class="rodape_item-lista"><a href="#">Login</a></li>
+                        <li class="rodape_item-lista"><a href="#">Matricular-se</a></li>
+                        <li class="rodape_item-lista"><a href="#">Perguntas frequentes</a></li>
+                        <li class="rodape_item-lista"><a href="#">Para Escolas</a></li>
+                        <li class="rodape_item-lista"><a href="#">Contacto</a></li>
+                       
+                    </ul>
+                </nav>
+            </section>
 
         </footer>
     </body>
