Adicionando a o formulario no rodape.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/rodape.css">
         <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/form-newsletter.css">
     </head>
 
     <body>
@@ -89,6 +90,19 @@
                        
                     </ul>
                 </nav>
+            </section>
+
+            <section class="rodape-seccao">
+                <h2 class="rodape_titulo">Receba novidades e lançamentos</h2>
+
+                <form action="#" method="get"class="form-newsletter">
+
+                    <label for="email-newsletter" class="form-newsletter_label">Seu email pessoal</label>
+                    <input id="email-newsletter"  name="email-newsletter"   class="form-newsletter_campo" type="email">
+                    <button type="submit" class="form-newsletter_botao">OK</button>
+
+                </form>
+
             </section>
 
         </footer>
