Adequando o rodape a telas para tamanhos medios

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <footer class="rodape">
 
-            <section class="rodape-seccao">
+            <section class="rodape-seccao rodape_seccao-sobre">
 
                 <img src="img/logo.svg" alt="logo_musicadot" class="logo_rodape">
 
@@ -57,7 +57,7 @@
                 </ul>
             </section>
 
-            <section class="rodape-seccao">
+            <section class="rodape-seccao rodape_seccao-cursos">
                 <nav>
                     <h2 class="rodape_titulo">cursos DA MUSUICDOT</h2>
 
@@ -77,7 +77,7 @@
             </section>
 
             <section class="rodape-seccao">
-                <h2 class="rodape_titulo">MusicDot</h2>
+                <h2 class="rodape_titulo rodape_seccao-links">MusicDot</h2>
                 <nav>
                     <ul>
                         <li class="rodape_item-lista"><a href="#">Apostila</a></li>
@@ -92,7 +92,7 @@
                 </nav>
             </section>
 
-            <section class="rodape-seccao">
+            <section class="rodape-seccao rodape_seccao-newsletter">
                 <h2 class="rodape_titulo">Receba novidades e lançamentos</h2>
 
                 <form action="#" method="get"class="form-newsletter">
